fix: prevent text overflow

--- a/src/app/styles/red-post-theme.css
+++ b/src/app/styles/red-post-theme.css
@@ -206,7 +206,7 @@
     }
 
     p {
-      margin-right: 40px;
+      margin-right: 45px;
     }
   }
 }
